<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:onClick="Login"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordInput"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Password_Hint"
        android:inputType="text|textPassword"
        android:textAppearance="@style/TextAppearance.App.Body1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:translationY="0dp"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Username_Hint"
        android:textAppearance="@style/TextAppearance.App.Body1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInput"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Email_Hint"
        android:textAppearance="@style/TextAppearance.App.Body1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/signUp3"
        android:layout_width="172dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:text="@string/SignUpTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo3" />

    <Button
        android:id="@+id/submit3"
        android:layout_width="136dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:onClick="Login"
        android:text="@string/Submit"
        android:textAppearance="@style/TextAppearance.App.Button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/logo3"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/App"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.App.Headline1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="Login"
        android:text="Already have an account?"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit3"
        app:layout_constraintVertical_bias="0.019" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tracktive" />

</androidx.constraintlayout.widget.ConstraintLayout>