<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/EmailInput"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:hint="Email/Username"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PasswordInput"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Password_Hint"
        android:inputType="text|textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:translationY="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput" />

    <TextView
        android:id="@+id/signUp2"
        android:layout_width="172dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:text="@string/LoginTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

    <Button
        android:id="@+id/submit2"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:onClick="authenticate"
        android:text="@string/Submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput" />

    <TextView
        android:id="@+id/logo2"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:text="@string/App"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="Invalid Username or Password"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp2" />

</androidx.constraintlayout.widget.ConstraintLayout>